<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadingEdge="vertical"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/background"
        android:orientation="vertical" >

        <Button
            android:id="@+id/about_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/About" />

        <Button
            android:id="@+id/error_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_label" />

        <Button
            android:id="@+id/game_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_label" />

        <Button
            android:id="@+id/dictionary_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dictionary" />

        <Button
            android:id="@+id/letris_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Letris" />

        <Button
            android:id="@+id/communication_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/communication" />

        <Button
            android:id="@+id/twoplaygame_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/twoplayergame" />

        <Button
            android:id="@+id/trickiest_part_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Trickiest_Part" />

        <Button
            android:id="@+id/final_project_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Final_Project" />

        <Button
            android:id="@+id/exit_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/quit_label" />
    </LinearLayout>

</ScrollView>