<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dip" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dip"
        android:text="@string/Letris"
        android:textSize="24.5sp" />

    <Button
        android:id="@+id/letris_continue_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_label" />

    <Button
        android:id="@+id/letris_new_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_game_label" />

    <Button
        android:id="@+id/letris_instruction"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction" />
    
    <Button
        android:id="@+id/letris_acknowledge_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/acknowledge" />
    
    <Button
        android:id="@+id/letris_about_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_label" />

    <Button
        android:id="@+id/letris_exit_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_label" />

</LinearLayout>