<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="100px"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:text="@string/hello"
            android:textColor="@color/red"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/about_mypic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/my_photo" />

        <TextView
            android:id="@+id/about_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/about_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_email"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/about_degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_degree"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/about_program"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_program"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/imei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

</ScrollView>