<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/communication_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:stretchColumns="*" >

        <TableRow>

            <Button
                android:id="@+id/communication_registor_button"
                android:onClick="onClick"
                android:text="@string/registor" />

            <Button
                android:id="@+id/communication_unregistor_button"
                android:onClick="onClick"
                android:text="@string/unregistor" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/communication_edit_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="input Receiver IMEI here ..."
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textColorHint="#238745"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/communication_edit_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="input message here ..."
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textColorHint="#238745"
        android:textSize="16sp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:stretchColumns="*" >

        <TableRow>

            <Button
                android:id="@+id/communication_send"
                android:onClick="onClick"
                android:text="@string/send_label" />

            <Button
                android:id="@+id/communication_clear"
                android:onClick="onClick"
                android:text="@string/clear_label" />

            <Button
                android:id="@+id/communication_acknowledge"
                android:onClick="onClick"
                android:text="@string/acknowledge" />
        </TableRow>
    </TableLayout>
	
    <TextView
        android:id="@+id/communication_sender_index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
</LinearLayout>