<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="input some words here ..."
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textColorHint="#238745"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/edit_text"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@id/edit_text"
        android:layout_alignTop="@id/edit_text"
        android:text="@string/clear_label" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/edit_text"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scrollbars="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/Reture_To_Menu" />

    <Button
        android:id="@+id/acknowledge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/go_back"
        android:text="@string/acknowledge" />

</RelativeLayout>